@@ -1,3 +1,11 @@
+2008-11-05  David Gilbert  <david.gilbert@object-refinery.com>
+
+    Bug 2221495:
+    * source/org/jfree/chart/annotations/XYLineAnnotation.java
+    (draw): Clip line before drawing,
+    * source/org/jfree/chart/util/LineUtilities.java: New file,
+    * tests/org/jfree/chart/util/junit/LineUtilitiesTests.java: Likewise.
+
 2008-10-27  David Gilbert  <david.gilbert@object-refinery.com> 
 
     * source/org/jfree/chart/axis/CategoryAxis.java
